--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
   "crons": [
     {
       "path": "/api/ingestion/cron",
-      "schedule": "*/5 * * * *"
+      "schedule": "0 0 * * *"
     }
   ],
   "rewrites": [
