--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
     {
       "path": "/api/cron/boost-status",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/analytics",
+      "schedule": "0 3 * * *"
     }
   ],
   "rewrites": [
